@@ -26,7 +26,7 @@
     PE         -pe        Win32/Win64 PE binary format
     ELF32      -elf       Linux 32-bit object format
     ELF64      -elf64     Linux 64-bit object format
-    DJGPP      -djgpp     Djgpp's 32-bit COFF variant (optional).
+    DJGPP      -djgpp     Djgpp's 32-bit COFF variant
 
     JWasm is distributed in several packages. Besides the source package
     there are some which contain precompiled binaries for Windows, DOS and
@@ -122,7 +122,8 @@
 
     name         tool chain used               creates binary for
     ---------------------------------------------------------------
-    OWWin32.mak  Open Watcom v1.8-v1.9         Win32 [, DOS (32-bit)]
+    OWWin32.mak  Open Watcom v1.8-v2.0         Win32 [, DOS (32-bit)]
+    OWDOS32.mak  Open Watcom v2.0              DOS (32-bit)
     OWDOS16.mak  Open Watcom v1.8-v1.9         DOS (16-bit)
     OWOS2.mak    Open Watcom v1.8-v1.9         OS/2 (32-bit)
     OWLinux.mak  Open Watcom v1.8-v1.9         Linux
