@@ -12,10 +12,20 @@
       model is flat; see tiny3.asm.
    -  default fastcall for 32-bit (MS style) caused a GPF for non-proc
       symbols; see fastcms.asm.
+   -  listing: when segment directive created a list entry, the offset size
+      may have been wrong.
+   -  omf format: externdef may have caused a PUBDEF record to be written
+      in pass 2, resulting in an invalid object module.
+   -  invoke directive: if cpu was 8086, and the argument was a constant 0,
+      a wrong value may have been pushed; see invoke56.asm.
+
    Other changes:
    -  output format -djgpp: support added for 16-bit offset fixups.
    -  in listings, for directives, offset of 16-bit segments displayed with
       width 4.
+   -  OWDOS32.mak added. Creates a 32-bit version that uses the native Open
+      Watcom runtime for extended DOS. Open Watcom 2.0 is recommended to
+      create this variant.
 
    25.03.2023, v2.17:
 
